2008-08-01  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-upgrade.c
	  src/gconf-helpers/gconf-upgrade.h
		- (nm_gconf_migrate_0_7_ip4_method): Update ipv4 method names to match
			NM svn r3882 and later

	* gconf-helpers/gconf-helpers.c
		- (nm_gconf_get_all_connections): convert method names

	* src/connection-editor/page-ip4.c
		- (populate_ui, ui_to_setting): use new method names

2008-07-31  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/page-ip4.c
		- (method_changed): tighten up UI options; disable widgets where the
			option doesn't make sense for the IP4 method chosen

2008-07-29  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/page-ip4.c
		- (dns_servers_changed, dns_searches_changed): remove, validation
			handled by ui_to_setting() now
		- (ui_to_setting): validate here too
		- (validate): use ui_to_setting() for partial validation

2008-07-28  Dan Williams  <dcbw@redhat.com>

	* src/applet-device-wifi.c
		- (wireless_device_added): disconnect from the Settings object's
			new-connection signal when the device is destroyed to prevent
			callbacks for invalid, removed devices (rh #457380)

2008-07-28  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/ws-wep-key.c
	  src/wireless-security/ws-wep-key.h
		- (ws_wep_key_new): WEP auth method and key indexes are pretty pointless
			for Ad-Hoc networks; hide them in the Ad-Hoc case

	* src/wireless-dialog.c
	  src/connection-editor/page-wireless-security.c
		- (security_combo_init, ce_page_wireless_security_new): fix up for
			above change

2008-07-27  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/vpn-helpers.c
		- (vpn_get_plugins): look for UI plugins in $LIBDIR/NetworkManager to
			match NM svn 3863 and later

2008-07-27  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/Makefile.am
	  src/connection-editor/nm-connection-editor-service.xml
		- Add service definition for single-app-instance D-Bus API

	* src/connection-editor/nm-connection-list.c